fixed noise texture, insta logo, layout shift

--- a/src/scss/globals/boilerplate.scss
+++ b/src/scss/globals/boilerplate.scss
@@ -1,8 +1,6 @@
 html {
   font-size: 100%;
   // box-sizing: border-box;
-  min-height: fill-available;
-  min-height: -webkit-fill-available;
 }
 
 *,
@@ -17,9 +15,8 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  min-height: fill-available;
-  min-height: -webkit-fill-available;
-  overflow: hidden;
+  overflow-x: hidden;
+  background-color: white;
 }
 
 a {
