--- a/src/scss/globals/layout.scss
+++ b/src/scss/globals/layout.scss
@@ -210,7 +210,8 @@ a {
   }
 }
 
-object {
+object,
+svg {
   display: inline-block;
   background-size: cover;
   pointer-events: none;
@@ -221,8 +222,8 @@ object {
 }
 
 .follow-mouse {
-  height: 150px;
-  width: 150px;
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
   position: absolute;
   top: -50%;
@@ -247,5 +248,13 @@ object {
   left: 0;
   z-index: 2;
   mix-blend-mode: soft-light;
-  opacity: 0.8;
+  opacity: 0.7;
+  object {
+    width: 100%;
+    transform: scale(1) !important;
+    @include tablet {
+      height: 100%;
+      width: initial;
+    }
+  }
 }
